deps/boost/libs/compute/CMakeFiles/CMakeError 2.log
Determining if the CL_VERSION_2_2 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_3517e/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make  -f CMakeFiles/cmTC_3517e.dir/build.make CMakeFiles/cmTC_3517e.dir/build
Building C object CMakeFiles/cmTC_3517e.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_3517e.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_2'
  return ((int*)(&CL_VERSION_2_2))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_3517e.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_3517e/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_2
  return ((int*)(&CL_VERSION_2_2))[argc];
#else
  (void)argc;
  return 0;
#endif
}
Determining if the CL_VERSION_2_1 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_359b8/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make  -f CMakeFiles/cmTC_359b8.dir/build.make CMakeFiles/cmTC_359b8.dir/build
Building C object CMakeFiles/cmTC_359b8.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_359b8.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_1'
  return ((int*)(&CL_VERSION_2_1))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_359b8.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_359b8/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_1
  return ((int*)(&CL_VERSION_2_1))[argc];
#else
  (void)argc;
  return 0;
#endif
}
Determining if the CL_VERSION_2_0 exist failed with the following output:
Change Dir: /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp

Run Build Command(s):/usr/bin/make cmTC_66641/fast && /Applications/Xcode.app/Contents/Developer/usr/bin/make  -f CMakeFiles/cmTC_66641.dir/build.make CMakeFiles/cmTC_66641.dir/build
Building C object CMakeFiles/cmTC_66641.dir/CheckSymbolExists.c.o
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/cc  -F/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks  -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk   -o CMakeFiles/cmTC_66641.dir/CheckSymbolExists.c.o   -c /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c
/Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:8:19: error: use of undeclared identifier 'CL_VERSION_2_0'
  return ((int*)(&CL_VERSION_2_0))[argc];
                  ^
1 error generated.
make[1]: *** [CMakeFiles/cmTC_66641.dir/CheckSymbolExists.c.o] Error 1
make: *** [cmTC_66641/fast] Error 2


File /Users/gianlaager/Documents/code/C++/ClionProjects/acMandelbrotSet/deps/boost/libs/compute/CMakeFiles/CMakeTmp/CheckSymbolExists.c:
/* */
#include </Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/System/Library/Frameworks/OpenCL.framework/Headers/cl.h>

int main(int argc, char** argv)
{
  (void)argv;
#ifndef CL_VERSION_2_0
  return ((int*)(&CL_VERSION_2_0))[argc];
#else
  (void)argc;
  return 0;
#endif
}
